2012-07-10  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-12
	* fixing bug #95942 following the good advice of wim
	* M python/AthFile/impl.py

2012-07-09  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-11
	* adding optional protobuf generation for d3pd (experimental)
	* M bin/atl-gen-athena-d3pd-reader

2012-07-02  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-10
	* fixing bug #95748: add _ to the allowed list of tag characters
	* M bin/avn.py

2012-06-07  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-09
	* revert changes from PyUtils-00-12-08 and make
	  pool_insertFileToCatalog and pool_extractFileIdentifier less verbose
	* M python/AthFile/impl.py
	* M bin/pool_insertFileToCatalog.py
	* M bin/pool_extractFileIdentifier.py

2012-06-06  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-08
	* correctly catch pool_insertFileToCatalog errors and propagate
	* M python/AthFile/impl.py
	* M bin/pool_insertFileToCatalog.py

2012-05-29  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-07
	* fix bogus WorkArea/cmt/requirements file (runtime project was
	  labeled as AtlasAtlasFoo instead of AtlasFoo)
	* M python/WorkAreaLib.py

2012-04-11  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-06
	* handle case where a d3pd block has a prefix_n or prefix_N but
	  no other corresponding prefix_xyz branch
	* M bin/atl-gen-athena-d3pd-reader

2012-04-10  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-05
	* change when forking happens to not lock in xrootd threads
	* fixes bug #93510
	* M python/AthFile/__init__.py
	* M python/AthFile/impl.py

2012-04-05  Graeme Andrew Stewart <graeme.andrew.stewart@cern.ch>
    * tagging PyUtils-00-12-04
    * add diffTAGFile.py script
    * A bin/diffTAGFile.py


2012-04-02  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-03
	* fix bug #93259: dont use multiprocessing but still fork
	* also install diff-athfile into InstallArea