@@ -1,3 +1,9 @@
+2012-07-11  Sebastien Binet  <binet@cern.ch>
+
+	* tagging PyUtils-00-12-13
+	* fix bug #95993: preliminary support for reading ROOT files over https
+	* M python/AthFile/impl.py
+
 2012-07-10  Sebastien Binet  <binet@cern.ch>
 
 	* tagging PyUtils-00-12-12
